# vlm-safety

./: .gitignore  main.py  pyproject.toml
configs/: default.yaml
docs/: uv-setup.md
scripts/: attack_qwen_vl.py  evaluate_vlm.py  generate_adversarial.py  infer_qwen_vl.py  make_ocr_image.py  run_batch.py  run_batch.sh  verify_patchify.py
src/vlm_safety/: __init__.py  clip_attack.py  evaluate.py  remote_vlm.py  utils.py
tests/: test_evaluate.py  test_utils.py
